--- a/src/components/HMvideo/HMvideo.css
+++ b/src/components/HMvideo/HMvideo.css
@@ -1,6 +1,6 @@
 .viwe{
     width: 95%;
-    background-image: url(/public/images/img.jpg);
+    background-image: url(/Task2/images/img.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     margin: 0 auto;
